# PyTorch-Studies

./: main.py  pyproject.toml  requirements.txt
Model_WorkFlow/: ComputerVision.ipynb  LinearRegression.ipynb  NeuralNetworkClassification.ipynb
Model_WorkFlow/models/: 01_pytorch_binarycl_workflow_model_1.pth  01_pytorch_computervision_workflow_model_00.pth  01_pytorch_lr_workflow_model_1.pth  01_pytorch_multiclasscl_workflow_model_02.pth  02_pytorch_computervision_workflow_model.pth
Tensors/: tensors_fundamentals.ipynb
